--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,8 @@
     <div class="container">
         <div class="row">  
             <div class="col">
+		    <!--================================change made  shkinking.com========================-------> 
+		   <a href="https://shrinkearn.com/ref/tim2k"><img src="https://shrinkearn.com/webroot/modern_theme/img/468x60.gif" title="Shorten URLs and Earn Money" /></a>
                 <div class="card">
                     <div class="card-header text-center">
                       <h5 class="mb-0">
